--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
         <img src="fondo-morado-azul-degradado-palabra-ombre.jpg" alt="fondo" class="fondo">
     </div>
 <div id="ImgContainer">
-    <div class="content">
+    <div class="content contentPC" >
         <h2>Mountain</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <input type="button" name="more" id="button" value="Mas informacion">
     </div>
-    <div class="content">
+    <div class="content contentPC" id="cart2">
         <h2>Mountain</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <input type="button" name="more" id="button" value="Mas informacion">
     </div>
-    <div class="content">
+    <div class="content contentPC" id="cart3">
         <h2>Mountain</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <input type="button" name="more" id="button" value="Mas informacion">
     </div>
-    <div class="content">
+    <div class="content contentPC" id="cart4">
         <h2>Mountain</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <input type="button" name="more" id="button" value="Mas informacion">
