--- a/Comidas.html
+++ b/Comidas.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Comidas.css">
+    <link rel="Icon" href="worldwide_814513.png">
+    <title>Feria Cultural/Comidas</title>
 </head>
 <body>
 <header>
@@ -39,53 +41,22 @@
     <section id="comida" style="margin-top: -150px;"></section>
 <div class="column1R">
     
-        <h1>Comidas</h1>
+        <span class="borderText"><h1>Comidas</h1></span>
         <section id="Bailes-tradiciones"></section>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
     <section id="Turismo"></section>
-    <h1>Bailes y tradiciones</h1>
+    <span class="borderText LargeText"><h1>Bailes y tradiciones</h1></span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
     <section id="Extencion-Territorial"></section>
-    <h1>Turismo</h1>
+    <span class="borderText"><h1>Turismo</h1></span>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
-    <h1>Extencion territorial</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
+    <span class="borderText LargeText"><h1>Extencion territorial</h1></span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus est quisquam tenetur dicta et inventore, facere facilis at dolore provident dolor obcaecati laboriosam unde ea a debitis vitae possimus suscipit in nobis illo error dolorem exercitationem! Voluptates ducimus dolores beatae ut nisi reprehenderit quam quisquam, dolorum consectetur amet officiis minus, sed doloremque voluptate alias? Fugit, iure. Numquam corrupti aliquid, rem laborum nam accusantium consequuntur, soluta commodi ut quos obcaecati, odit perferendis tempora alias! Iste eveniet illum ipsum quo voluptatem odio, corporis reprehenderit impedit nemo, perspiciatis repudiandae consequuntur neque quas facere, quaerat rerum dolor est explicabo ipsam natus minima? Nostrum perferendis cum, saepe qui necessitatibus voluptatem dolor est molestias incidunt itaque! Reprehenderit tempore pariatur saepe! Obcaecati eaque voluptatum quibusdam placeat nihil modi ea quos et soluta nesciunt magnam, perspiciatis dicta reprehenderit corporis repellendus doloremque, culpa sequi reiciendis sit? Officia corporis illo architecto, quasi reprehenderit</p>
 </div>
- <div class="column2L">
-
-<div class="icons"><a href="#comida">
-        <img src="cloche_4750938.png" alt="Data">
-       <div class="textAlignDiv">
-           <h4>Comida</h4>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem aspernatur, eligendi vitae esse magni!</p>
-       </div>
-    </a>
-    </div>
-    <div class="icons"><a href="#Bailes-tradiciones">
-        <img src="cloche_4750938.png" alt="Data">
-        <div class="textAlignDiv">
-            <h4>Bailes y tradiciones</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem aspernatur, eligendi vitae esse magni!</p>
-        </div>
-    </a>
-    </div>
-
-    <div class="icons"><a href="#Turismo">
-        <img src="cloche_4750938.png" alt="Data">
-        <div class="textAlignDiv">
-            <h4>Turismo</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem aspernatur, eligendi vitae esse magni!</p>
-        </div>
-    </a>
-    </div>
-    <div class="icons"><a href="#Extencion-Territorial">
-        <img src="cloche_4750938.png" alt="Data">
-        <div class="textAlignDiv">
-            <h4>Extencion territorial</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae exercitationem aspernatur, eligendi vitae esse magni!</p>
-        </div>
-    </a>
-    </div>
 </div>
 </div>
 </body>
