--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
     </div>
 <div id="ImgContainer">
     <div class="content contentPC" >
-        <h2>Managua</h2>
+        <h2>Puntarenas</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="Informacion.html"><button id="button">Ver mas</button></a>
+        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     <div class="content contentPC" id="cart2">
-        <h2>Leon</h2>
+        <h2>Puntarenas</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="Informacion.html"><button id="button">Ver mas</button></a>
+        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     <div class="content contentPC" id="cart3">
-        <h2>Belice</h2>
+        <h2>Puntarenas</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="Informacion.html"><button id="button">Ver mas</button></a>
+        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     <div class="content contentPC" id="cart4">
-        <h2>Rivas</h2>
+        <h2>Puntarenas</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="Informacion.html"><button id="button">Ver mas</button></a>
+        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     
 </div>
