--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="Icon" href="worldwide_814513.png">
+    <link rel="Icon" href="worldwide_814513.svg">
     <title>Feria Cultural 2023</title>
 </head>
 <body>
 <header>
   <nav id="nav-bar">
     <div class="imagenes">
-        <img src="worldwide_814513.png" alt="imagen" class="imagen" style="mix-blend-mode: darken;">
+        <a href="#"><img src="Log-Feria-Pureza-Web.png" alt="imagen" class="imagen" style="mix-blend-mode: darken;"></a>
         <img src="menu (1).png" alt="menu" class="menu-imagen">
     </div>
             <ul class="menu">
                 <a class="links" href="#"><li class="elements">Home</li></a>
-                <a class="links" href="#"><li class="elements">About</li></a>
+                <a class="links" href="Informacion.html"><li class="elements">About</li></a>
                 <a class="links" href="#"><li class="elements">blog</li></a>
                 <a class="links" href="#"><li class="elements">contact</li></a>
             </ul>
@@ -26,7 +26,7 @@
 <!-- Fondo inicio -->
     <div class="Container-info">
     <div class="container-Text">
-        <img src="browser_718063.png" alt="img">
+        <img src="Log-Feria-Pureza-Web.png" alt="img">
         <div class="textContainer">
             <h1> The new age of technology </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et accusantium in alias dolores facere? Officia dolores cupiditate accusantium commodi voluptatem, pariatur recusandae assumenda nemo nulla animi eaque expedita maxime excepturi? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quaerat nam repellendus soluta magni voluptatibus, impedit omnis, et ad, rem sunt odit? Dolorum tenetur ducimus rem quod quibusdam ea obcaecati.</p>
@@ -36,22 +36,22 @@
     </div>
 <div id="ImgContainer">
     <div class="content contentPC" >
-        <h2>Puntarenas</h2>
+        <h2>Managua</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     <div class="content contentPC" id="cart2">
-        <h2>Puntarenas</h2>
+        <h2>Leon</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     <div class="content contentPC" id="cart3">
-        <h2>Puntarenas</h2>
+        <h2>Belice</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
     <div class="content contentPC" id="cart4">
-        <h2>Puntarenas</h2>
+        <h2>Rivas</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
         <a href="puntarenas.html"><button id="button">Ver mas</button></a>
     </div>
@@ -97,5 +97,81 @@
  </div>
 </div>
 </body>
+<footer>
+    <div class="footerContainer">
+        <img src="Log-Feria-Pureza-Web.png" alt="Logo-Feria-Pureza" class="footerLogo" style="width: 14vw;min-width: 29vh; margin: 10px;">
+        <a href="#footerSe" onclick="window.open('https://www.pmaria-managua.org/')"><img src="Logo-Pureza.svg" alt="Pureza" class="purezaFot" style="width: 6vw;    min-width: 10vh; margin: 45px;"></a>
+    <div class="allContainer">
+        <div class="textContainer" style="text-align: start;width: 348px;display: flex;flex-direction: column;align-items: start;">
+        <p>Derechos Reservados 2023, Coleguio Pureza de Maria, Managua</p>
+        <p>Diseño y deagramacion, Nestor Castillo Espinosa</p>
+    </div>
+       <div class="icons" style="display: flex;width: 187px; height: 87px; justify-content: space-around; align-items: center;">
+        <div onclick="window.open('https://www.instagram.com/pmariamanagua/?hl=es')" class="icon1"></div>
+        <div onclick="window.open('https://www.facebook.com/people/Colegio-Pureza-De-Mar%C3%ADa-Mga/100063892570364/')" class="icon2" style="width: 6.3vh; height: 2.4em;"></div>
+        <div onclick="window.open('https://twitter.com/pmariamanagua?lang=es')" class="icon3" style="width: 6.7vh; height: 2.5em;"></div>
+       </div>
+    </div>
+</div>
+</footer>
+<section id="footerSe"></section>
+<style>
+    .icon1 {
+        width: 6.5vh;
+        height: 2.5em;
+        background-image: url(instagram.png); 
+        background-size: 35px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon1:hover {
+        background-image: url(instagram-hover.png);
+        transition: 0.5s;
+    }
+    .icon2 {
+        background-image: url(facebook.png); 
+        background-size: 34px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon2:hover {
+        background-image: url(facebook-hover.png);
+        transition: 0.5s;
+    }
+    .icon3 {
+        background-image: url(twitter.png); 
+        background-size: 34px; 
+        background-repeat: no-repeat;
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .icon3:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    .footerLogo {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .footerLogo:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    .purezaFot {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .purezaFot:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    .allContainer {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+</style>
 <script src="index.js"></script>
 </html>
