--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
 </body>
 <footer>
     <div class="footerContainer">
-        <img src="Log-Feria-Pureza-Web.png" alt="Logo-Feria-Pureza" class="footerLogo" style="width: 16vw;min-width: 23vh;margin: 10px;">
-        <a href="#footerSe" onclick="window.open('https://www.pmaria-managua.org/')"><img src="Logo-Pureza.svg" alt="Pureza" class="purezaFot" style="width: 6vw;    min-width: 10vh; margin: 45px;"></a>
+        <div class="containerImg" style="display: flex;align-items: center;justify-content: center;flex-wrap: nowrap;">
+            <img src="Log-Feria-Pureza-Web.png" alt="Logo-Feria-Pureza" class="footerLogo" style="width: 14vw;min-width: 29vh; margin: 10px;">
+            <a href="#footerSe" onclick="window.open('https://www.pmaria-managua.org/')"><img src="Logo-Pureza.svg" alt="Pureza" class="purezaFot" style="width: 6vw;    min-width: 10vh; margin: 45px;"></a>
+        </div>
     <div class="allContainer">
-        <div class="textContainer" style="text-align: start;width: 351px;display: flex;flex-direction: column;align-items: start;">
+        <div class="textContainer" style="text-align: start;width: 348px;display: flex;flex-direction: column;align-items: start;">
         <p>Derechos Reservados 2023, Coleguio Pureza de Maria, Managua</p>
         <p>Diseño y deagramacion, Nestor Castillo Espinosa</p>
     </div>
