--- a/Informacion.html
+++ b/Informacion.html
@@ -35,6 +35,9 @@
         <img src="fondo-morado-azul-degradado-palabra-ombre.jpg" alt="fondo" class="fondo" style="filter: opacity(100);">
     </div>
     <style>
+        * {
+            font-family: 'Open Sans', sans-serif;
+        }
         body {
       --Color-orange-logo: #D9603E;
       --Color-grey-logo: #42505E;
