--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     <h4>Diseño y diagramacion, Nestor Castillo Espinosa</h4>
 </div>
 <div class="icons">
-    <div class="icon1" style="width: 6.7vh; height: 2.8em;"></div>
-    <div class="icon2" style="width: 6.7vh; height: 2.8em;"></div>
-    <div class="icon3" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://www.instagram.com/pmariamanagua/?hl=es')" class="icon1" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://www.facebook.com/people/Colegio-Pureza-De-Mar%C3%ADa-Mga/100063892570364/')" class="icon2" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://twitter.com/pmariamanagua?lang=es')" class="icon3" style="width: 6.7vh; height: 2.8em;"></div>
 </div>
 </footer>
 <section id="footerSe"></section>
