--- a/Informacion.html
+++ b/Informacion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Comidas.css">
     <link rel="Icon" href="worldwide_814513.svg">
-    <title>Feria Cultural 2023/Informacion-General</title>
+    <title>Feria Cultural/Informacion-General</title>
 </head>
 <body>
 <header>
@@ -32,91 +32,95 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et accusantium in alias dolores facere? Officia dolores cupiditate accusantium commodi voluptatem, pariatur recusandae assumenda nemo nulla animi eaque expedita maxime excepturi? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quaerat nam repellendus soluta magni voluptatibus, impedit omnis, et ad, rem sunt odit? Dolorum tenetur ducimus rem quod quibusdam ea obcaecati.</p>
        </div>
     </div>
-        <img src="fondo-morado-azul-degradado-palabra-ombre.jpg" alt="fondo" class="fondo" style="filter: opacity(100);">
+        <img src="fondo-morado-azul-degradado-palabra-ombre.jpg" alt="fondo" class="fondo" style="filter: brightness(50%);">
     </div>
-    <style>
-        * {
-            font-family: 'Open Sans', sans-serif;
-        }
-        body {
-      --Color-orange-logo: #D9603E;
-      --Color-grey-logo: #42505E;
-      --Color-blue-logo: #0163B9;
-      --Color-green-logo: #7BCC48;
-      --Color-yellow-logo: #FDF459;
-      --Color-red-logo: #990000;
-        }
-        .Informacion_Cuadros {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            flex: 1 1 90%;
-            justify-content: space-around;
-            align-items: center;
-            background: rgba(228, 226, 226, 0.445);
-            flex-wrap: wrap;
-        }
-        .cubesContainer {
-            width: 55vh;
-            height: 68vh;
-            background-color: wheat;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            border: 2px solid black;
-            margin: 15px;
-        }
-        .cubesContainer a button {
-            width: 25vh;
-            height: 5vh;
-            background-color: rgb(240, 234, 223);
-            transition: 0.3s;
-        }
-        .cubesContainer a button:hover {
-            transition: 0.3s;
-        }
-        .img-Container {
-            width: 35vh;
-            height: 30vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 9px;
-            border: 2px solid black;
-        }
-    </style>
-<div class="Informacion_Cuadros">
-    <!-- Containers -->
-  <div class="cubesContainer">
-   <div class="img-Container">
-       <img src="Fondo-preza.jpg" alt="infoPhoto" style="width: 33vh; height: 28vh;">
-   </div>
-        <h3>Informacion sobre la feria</h3>
-        <p>Una breve descripcion sobre el tema para poder poner texto que no sea lorem ipsum por que ya me tiene aburrido</p>
-        <a href="#"><button>Mas acerca</button></a>
-  </div>
-      <!-- Fin Containers -->
-          <!-- Containers -->
-  <div class="cubesContainer">
-    <div class="img-Container">
-        <img src="Fondo-preza.jpg" alt="infoPhoto2" style="width: 33vh; height: 28vh;">
-    </div>
-         <h3>Informacion sobre la feria</h3>
-         <p>Una breve descripcion sobre el tema para poder poner texto que no sea lorem ipsum por que ya me tiene aburrido</p>
-         <a href="#"><button>Mas acerca</button></a>
-   </div>
-       <!-- Fin Containers -->
-           <!-- Containers -->
-  <div class="cubesContainer">
-    <div class="img-Container">
-        <img src="Fondo-preza.jpg" alt="infoPhoto3" style="width: 33vh; height: 28vh;">
-    </div>
-         <h3>Informacion sobre la feria</h3>
-         <p>Una breve descripcion sobre el tema para poder poner texto que no sea lorem ipsum por que ya me tiene aburrido</p>
-         <a href="#"><button>Mas acerca</button></a>
-   </div>
-       <!-- Fin Containers -->
+</div>
+<div class="InfoGeneral">
+    <section id="comida" style="margin-top: -150px;"></section>
+<div class="column1R">
+   <h1>Bienvenidos a la Feria Cultural del Colegio Pureza de María Carretera a Masaya</h1>
+   <p>Es un placer darles la más cordial bienvenida a todos los asistentes a la emocionante y enriquecedora Feria Cultural "Costa Rica en un Vistazo", organizada por los estudiantes de 9no grado. Este evento representa un espacio único donde la diversidad y la riqueza cultural de las provincias de Costa Rica se unen para ofrecer una experiencia educativa y entretenida para toda la comunidad.</p>
+   <h1>De que trata?</h1>
+   <p>La feria tiene como objetivo principal proporcionar a estudiantes, padres y visitantes en general la oportunidad de explorar y conocer más a fondo las particularidades que hacen de Costa Rica un país excepcional. Cada provincia, con sus propias tradiciones, costumbres y bellezas naturales, se presenta en este evento de manera creativa y educativa.</p>
+   <p>Desde las playas doradas del Pacífico hasta las selvas tropicales del Caribe, pasando por las imponentes montañas y volcanes, "Costa Rica en un Vistazo" resalta la extensa variedad geográfica y climática que caracteriza a nuestro país. Los asistentes podrán recorrer cada provincia a través de presentaciones visuales, exposiciones interactivas y muestras artísticas que capturan la esencia de cada lugar.</p>
+   <h1>Cual es el proposito?</h1>
+    <p>La Feria Cultural "Costa Rica en un Vistazo" tiene un propósito educativo y cultural enriquecedor. Busca fomentar el orgullo por nuestras raíces y patrimonio, así como inspirar a las nuevas generaciones a involucrarse en la construcción de un país más justo, equitativo y sostenible.</p>
+    <p>A través de esta experiencia, se promueve el entendimiento de la diversidad cultural y geográfica de Costa Rica, impulsando así el respeto y la tolerancia entre comunidades. Además, se incentiva la curiosidad y el aprendizaje constante, valores fundamentales en la formación integral de nuestros estudiantes.</p>
+    <h4>Disfruten la feria cultural Colegio Pureza de Maria Managua</h4>
+</div>
+</div>
+<footer>
+    <img src="Log-Feria-Pureza-Web.png" alt="Logo-Pureza" class="logoPureza" style="width: 30vh; margin: 20px; flex: 0 1 5vh;max-width: 29vh; min-width: 29vh;">
+    <a href="#" onclick="window.open('https://www.pmaria-managua.org/')" style="width: auto; height: auto;"><img src="Logo-Pureza.svg" alt="Pureza-log-Colegio" style="width: 15vh; margin: 20px;" class="logo-pureza-colegio"></a>
+    <div class="footerTextContainer" style="display: flex; flex-direction: column; margin: 20px; color: white;">
+    <h3>Derechos Reservados 2023, Colegio Pureza de Maria, Managua</h3>
+    <h4>Diseño y diagramacion, Nestor Castillo Espinosa</h4>
+</div>
+<div class="icons">
+    <div onclick="window.open('https://www.instagram.com/pmariamanagua/?hl=es')" class="icon1" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://www.facebook.com/people/Colegio-Pureza-De-Mar%C3%ADa-Mga/100063892570364/')" class="icon2" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://twitter.com/pmariamanagua?lang=es')" class="icon3" style="width: 6.7vh; height: 2.8em;"></div>
+</div>
+</footer>
+<section id="footerSe"></section>
+<style>
+   .icons {
+    width: 45vh;
+    height: 15vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   }
+   .icon1 {
+        width: 6.5vh;
+        height: 2.5em;
+        background-image: url(instagram.png); 
+        background-size: 40px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon1:hover {
+        background-image: url(instagram-hover.png);
+        transition: 0.5s;
+    }
+    .icon2 {
+        background-image: url(facebook.png); 
+        background-size: 41px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon2:hover {
+        background-image: url(facebook-hover.png);
+        transition: 0.5s;
+    }
+    .icon3 {
+        background-image: url(twitter.png); 
+        background-size: 40px; 
+        background-repeat: no-repeat;
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .icon3:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    .logoPureza {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .logoPureza:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    a .logo-pureza-colegio {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    a .logo-pureza-colegio:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+</style>
 </body>
 <script src="Food.js"></script>
 </html>
