--- a/index.html
+++ b/index.html
@@ -28,74 +28,102 @@
     <div class="container-Text">
         <img src="Log-Feria-Pureza-Web.png" alt="img">
         <div class="textContainer">
-            <h1> The new age of technology </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et accusantium in alias dolores facere? Officia dolores cupiditate accusantium commodi voluptatem, pariatur recusandae assumenda nemo nulla animi eaque expedita maxime excepturi? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit quaerat nam repellendus soluta magni voluptatibus, impedit omnis, et ad, rem sunt odit? Dolorum tenetur ducimus rem quod quibusdam ea obcaecati.</p>
+            <h1> Bienvenidos a la Feria Cultural </h1>
+            <p>Hoy es un día especial en el Colegio Pureza de María Carretera a Masaya, ya que nos sumergimos en una experiencia única. Nuestra Feria Cultural "Costa Rica en un Vistazo" está lista para sorprendernos. Un recorrido a través de nuestras provincias nos espera, con sus secretos geográficos y tesoros culturales. Desde las costas hasta las montañas, cada rincón de Costa Rica se despliega en esta celebración. Así que, sin más preámbulos, les extendemos la bienvenida a un día lleno de descubrimientos, aprendizaje y asombro.</p>
        </div>
     </div>
         <img src="fondo-morado-azul-degradado-palabra-ombre.jpg" alt="fondo" class="fondo">
     </div>
-<div id="ImgContainer">
-    <div class="content contentPC" >
-        <h2>Managua</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
+    <h1 style="text-align: center;">Provincias de 9no A</h1>
+    <div id="ImgContainer">
+        <div class="content contentPC" >
+            <h2>Puntarenas</h2>
+            <p>
+                Puntarenas, en la costa oeste de Costa Rica, es famosa por sus playas, pesca, turismo marítimo y conexión con la Isla del Coco.</p>
+            <a href="puntarenas.html"><button id="button">Ver mas</button></a>
+        </div>
+        <div class="content contentPC" id="cart2" style="background-image: url(San-Jose.avif);">
+            <h2>San Jose</h2>
+            <p>
+                San José, en el centro de Costa Rica, es la capital cultural con museos, vida urbana y patrimonio histórico, como el Teatro Nacional.</p>
+            <a href="San-Jose.html"><button id="button">Ver mas</button></a>
+        </div>
     </div>
-    <div class="content contentPC" id="cart2">
-        <h2>Leon</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
+    <div class="containerFood">
+        <div class="text">
+            <h1>Algunos cantones de Puntarenas</h1>
+        </div>
+       <div class="elementsContainer">
+          <img src="Escudo_de_Puntarenas.svg.png" alt="Imagen">
+          <h3>Puntarenas</h3>
+          <p> Situado en la costa, Puntarenas es un cantón conocido por su puerto y su malecón frente al mar. Ofrece actividades pesqueras, playas y opciones turísticas variadas.</p>
+          <a href="puntarenas.html"><input type="button" value='Ver mas' class="button"></a>
+       </div>
+       <div class="elementsContainer">
+          <img src="Escudo_de_Puntarenas.svg.png" alt="Imagen">
+          <h3>Esparza</h3>
+          <p>Esparza es un cantón histórico con raíces coloniales. Se destaca por su arquitectura antigua, parques y la Basílica de Nuestra Señora de las Mercedes.</p>
+          <a href="puntarenas.html"><input type="button" value='Ver mas' class="button"></a>
+       </div>
+       <div class="elementsContainer">
+          <img src="Escudo_de_Puntarenas.svg.png" alt="Imagen">
+          <h3>Buenos Aires</h3>
+          <p>Enclavado en la Cordillera de Talamanca, Buenos Aires es un cantón montañoso con belleza natural, reservas indígenas y destinos ecoturísticos.</p>
+          <a href="puntarenas.html"><input type="button" value='Ver mas' class="button"></a>
+       </div>     
+       <div class="elementsContainer">
+        <img src="Escudo_de_Puntarenas.svg.png" alt="Imagen">
+        <h3>Montes de Oro</h3>
+        <p> Con paisajes montañosos y costeros, Montes de Oro ofrece biodiversidad en sus parques y áreas protegidas, atrayendo a amantes de la naturaleza.</p>
+        <a href="puntarenas.html"><input type="button" value='Ver mas' class="button"></a>
+     </div>    
+     <div class="elementsContainer">
+        <img src="Escudo_de_Puntarenas.svg.png" alt="Imagen">
+        <h3>Osa</h3>
+        <p>Osa es famoso por su abundante vida silvestre y el Parque Nacional Corcovado. Sus playas, selvas y biodiversidad lo convierten en un paraíso para el ecoturismo.</p>
+        <a href="puntarenas.html"><input type="button" value='Ver mas' class="button"></a>
+     </div>     
+     <div class="elementsContainer">
+        <img src="Escudo_de_Puntarenas.svg.png" alt="Imagen">
+        <h3>Quepos</h3>
+        <p>Conocido por su proximidad al Parque Nacional Manuel Antonio, Quepos ofrece playas hermosas, vida nocturna animada y aventuras en la naturaleza.</p>
+        <a href="puntarenas.html"><input type="button" value='Ver mas' class="button"></a>
+     </div>      
+       <div class="text">
+        <h1>Algunos cantones de San Jose</h1>
     </div>
-    <div class="content contentPC" id="cart3">
-        <h2>Belice</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
+       <div class="elementsContainer">
+          <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
+          <h3>San jose</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+          <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
+       </div>
+       <div class="elementsContainer">
+          <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
+          <h3>Puriscal</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+          <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
+       </div>   
+       <div class="elementsContainer">
+        <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
+        <h3>Aserrí</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+        <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
+     </div>
+     <div class="elementsContainer">
+        <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
+        <h3>Tarrazú</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+        <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
+     </div>
+     <div class="elementsContainer">
+        <img src="Escudo_de_la_Provincia_de_San_José.svg.png" alt="Imagen">
+        <h3>Santa Ana</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
+        <a href="San-Jose.html"><input type="button" value='Ver mas' class="button"></a>
+     </div>
+     </div>
     </div>
-    <div class="content contentPC" id="cart4">
-        <h2>Rivas</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sequi atque quis voluptatibus repellat.</p>
-        <a href="puntarenas.html"><button id="button">Ver mas</button></a>
-    </div>
-    
-</div>
-<div class="containerFood">
-    <div class="text">
-        <h1>Comidas</h1>
-    </div>
-   <div class="elementsContainer">
-      <img src="Tomate.jpeg" alt="Imagen">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
-      <a href="Comidas.html"><input type="button" value='Ver mas' class="button"></a>
-   </div>
-   <div class="elementsContainer">
-      <img src="Tomate.jpeg" alt="Imagen">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
-      <a href="Comidas.html"><input type="button" value='Ver mas' class="button"></a>
-   </div>
-   <div class="elementsContainer">
-      <img src="Tomate.jpeg" alt="Imagen">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
-      <a href="Comidas.html"><input type="button" value='Ver mas' class="button"></a>
-   </div>       
-   <div class="text">
-    <h1>Tradiciones</h1>
-</div>
-   <div class="elementsContainer">
-      <img src="Tomate.jpeg" alt="Imagen">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
-      <a href="Comidas.html"><input type="button" value='Ver mas' class="button"></a>
-   </div>
-   <div class="elementsContainer">
-      <img src="Tomate.jpeg" alt="Imagen">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
-      <a href="Comidas.html"><input type="button" value='Ver mas' class="button"></a>
-   </div>   
-   <div class="elementsContainer">
-    <img src="Tomate.jpeg" alt="Imagen">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius exercitationem corporis sed veritatis excepturi natus itaque amet possimus commodi! Dignissimos!</p>
-    <a href="Comidas.html"><input type="button" value='Ver mas' class="button"></a>
- </div>
- </div>
-</div>
 </body>
 <footer>
     <img src="Log-Feria-Pureza-Web.png" alt="Logo-Pureza" class="logoPureza" style="width: 30vh; margin: 20px; flex: 0 1 5vh;max-width: 29vh; min-width: 29vh;">
