--- a/Comidas.html
+++ b/Comidas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Comidas.css">
     <link rel="Icon" href="worldwide_814513.svg">
-    <title>Feria Cultural 2023</title>
+    <title>Feria Cultural/Comidas</title>
 </head>
 <body>
 <header>
@@ -55,6 +55,78 @@
 </div>
 </div>
 </div>
+<footer>
+    <img src="Log-Feria-Pureza-Web.png" alt="Logo-Pureza" class="logoPureza" style="width: 30vh; margin: 20px; flex: 0 1 5vh;max-width: 29vh; min-width: 29vh;">
+    <a href="#" onclick="window.open('https://www.pmaria-managua.org/')" style="width: auto; height: auto;"><img src="Logo-Pureza.svg" alt="Pureza-log-Colegio" style="width: 15vh; margin: 20px;" class="logo-pureza-colegio"></a>
+    <div class="footerTextContainer" style="display: flex; flex-direction: column; margin: 20px; color: white;">
+    <h3>Derechos Reservados 2023, Colegio Pureza de Maria, Managua</h3>
+    <h4>Diseño y diagramacion, Nestor Castillo Espinosa</h4>
+</div>
+<div class="icons">
+    <div onclick="window.open('https://www.instagram.com/pmariamanagua/?hl=es')" class="icon1" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://www.facebook.com/people/Colegio-Pureza-De-Mar%C3%ADa-Mga/100063892570364/')" class="icon2" style="width: 6.7vh; height: 2.8em;"></div>
+    <div onclick="window.open('https://twitter.com/pmariamanagua?lang=es')" class="icon3" style="width: 6.7vh; height: 2.8em;"></div>
+</div>
+</footer>
+<section id="footerSe"></section>
+<style>
+   .icons {
+    width: 45vh;
+    height: 15vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   }
+   .icon1 {
+        width: 6.5vh;
+        height: 2.5em;
+        background-image: url(instagram.png); 
+        background-size: 40px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon1:hover {
+        background-image: url(instagram-hover.png);
+        transition: 0.5s;
+    }
+    .icon2 {
+        background-image: url(facebook.png); 
+        background-size: 41px; 
+        background-repeat: no-repeat;
+        transition: 0.5s;
+    }
+    .icon2:hover {
+        background-image: url(facebook-hover.png);
+        transition: 0.5s;
+    }
+    .icon3 {
+        background-image: url(twitter.png); 
+        background-size: 40px; 
+        background-repeat: no-repeat;
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .icon3:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    .logoPureza {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    .logoPureza:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+    a .logo-pureza-colegio {
+        filter: grayscale(100);
+        transition: 0.5s;
+    }
+    a .logo-pureza-colegio:hover {
+        filter: grayscale(0);
+        transition: 0.5s;
+    }
+</style>
 </body>
 <script src="Food.js"></script>
 </html>
